styles.css
 
 /* Home page */
 
 header {
    font-size: 18px;
    padding: 20px;
    background-color: #333;
    margin: 0;
    display: flex;
    justify-content: space-between;

  }
  header h1 {
    margin: 0;
    color: white;
  }

  header img {
    width: 100px;
    }


  div{
    display: flex;
    justify-content: space-around;
    background-color: #333;
    padding: 10px 0;
    width: 100%; 
  }

  div ul {
    list-style-type: none; 
    padding: 0; 
    margin: 0; 
    display: flex; 
    width: 100%; 
    justify-content: space-around;
}


div ul li a {
    color: white;
    text-decoration: none;
}


  main{
   padding: 20px;
  }

  
  .about-us{
    display: flex;
    text-align:center;
    background-color: #ddd;
    padding: 20px;
    margin: 20px;
    flex-direction: column;
    align-items: flex-start;

  }

  .about-us h3 {
   
    padding: 10px; 
    margin-top: 0; 
}
.about-us p{
    margin-top: 0;
    text-align: left
}

.shop-now a {
    padding: 10px;
    width: 90px;
    height: 20px;
    background-color: #4CAF50;
    color: white;
    border-radius: 5px;
    text-decoration: none;
    display: inline-block;   
}

.customer-reviews  {
    display: flex;
    background-color: #ddd;
    padding: 20px;
    margin: 20px;
    flex-direction: column;
  
}

.review {
    display: flex;
    flex-direction: column;
    margin-bottom: 20px;
    background-color: #ddd;
}

.review h4 {
    margin: 0;
    margin-bottom: 5px;
    background-color: #ddd;
}

.review p {
    margin: 0;
    background-color: #ddd;
}

.checked {
    color:yellow;
  }

.star-rating {
    background-color: #ddd;
    display: flex;
   align-items: center;
   justify-content: flex-start;
}

.fa-star {
    margin-right: 1px; 
  }
    
.star-rating .fa-star:nth-last-child(-n+2) {
    color: yellow;
}

.footer{
    background-color: #333;
    padding: 10px;
    margin: 0px;
    text-align: center;
    color: white;
}

/* make products file responsive */

.product-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 20px; 
    justify-content: center;
}
* {
box-sizing: border-box;
}
    body { 
        margin: 0; 
        padding: 0; 
    }
        
    img { 
        max-width: 100%;
         height: auto; 
        }
       
     .container { 
			
			display: flex;
			flex-wrap: wrap;
			justify-content: space-between;
		 }
        .header, 
        .footer {
             background-color: #f2f2f2;
              text-align: center; 
              padding: 10px; 
              width: 100%;}
		
              
	
        .main { 
			padding: 15px; 
			flex: 1;
		}
        .product {
            
            border: 1px solid #ccc;
            padding: 20px;
            text-align: center;
            display: flex;
            flex-direction: column;
            align-items: center; 
        }
        
        .product img {
            max-width: 100%;
            border-radius: 8px;
            margin-bottom: 10px
        }
        .price {
            color: #007BFF;
            font-weight: bold;
        }
        
        .add-to-cart {
            background-color: #4CAF50;
            color: #fff;
            padding: 10px;
            border: none;
            border-radius: 5px;
            margin: 10px;
            cursor: pointer;
        }
        
        .add-to-cart:hover {
            background-color: #45A049;
        }
        .product h3 {
            margin-top: 10px;
        }
        
        

        @media screen and (min-width: 769px) {
            .menu { width: 150px; }     
			.large { 
				width: 100%;
			}
			.medium { 
				width: 70%;
			}
			.small { 
				width: 30%;
			 }       
             .product-grid {
                grid-template-columns: repeat(2, 1fr); /* Two images per row on larger screens */
            }
        }

        @media screen and (max-width: 768px) {
			.body { 
				flex-direction: column;
			}
            .menu ul { 
				flex-direction: row;
			 }            
            
			.large {
				width: 100%;
			}
			.medium { 
				
				width: 60%;
			}
			.small { 
				
				width: 40%;
			 } 
             .product-grid {
                grid-template-columns: repeat(2, 1fr); /* Two images per row on larger screens */
            }
        }

        @media screen and (max-width: 480px) {
            .news-item header h1 { font-size: 18px; }
            .medium, .small { 
				.product-grid {
                    grid-template-columns: repeat(2, 1fr); /* Two images per row on larger screens */
                }
				width: 100%;
			 }
        }
    
  

